			SWI-Prolog ChangeLog
			====================

  * FIXED: MT-Version: allow calling utility threads/0 from an exit
    hook.  Improve error message when joining `myself'.  Reported by
    Andrew V. Diatchkov.
	
VERSION 3.4.5
=============

  * FIXED: Don't save prolog_flag `argv'.  Reported by Mark Staples.

  * FIXED: MT-Version: wrong saving of undo information in
    run_thread_exit_hooks(), causing a crash when a GC happens inside the
    execution of an exit hook.  Reported by Andrew V. Diatchkov.

  * FIXED: Predicate reference-count problem trapping an undefined
    procedure.  Thanks to Radek Marik.

  * FIXED: Some path problems installing Unix runtime environment.
    Thanks to Lourens van der Meij.

VERSION 3.4.4
=============

  * PORT: Fixed some compiler warnings for SunSoft C-compiler.  Still
    quite some left, but at least it now compiles. Thanks to
    Richard O'Keefe.

  * FIXED: memory stream-size if no output was written.  Fixes sformat
    and swrite calls not producing output.  Thanks to Daniel Cote.

  * FIXED: MT version: deadlock in append/1 and tell/1.  Thanks to
    Andrew Diatchkov.

  * FIXED: Stop profiler in PL_cleanup().  Reported by Lourens van der Meij.

  * PORT: added MacOS X required sys/malloc.h to files from rc directory.

  * FIXED: compile ! in x :- (!, y -> z) to C_LCUT rather then C_CUT.

VERSION 3.4.3
=============

  * FIXED: Quoted write issues around the ,.  Thanks to Jan Echternach.

  * PORT: Added __unix__ definition for __APPLE__ in pl-incl.h, fixing
    one of the problems on MacOS X Public Beta.  Also allowed for sys/malloc.h
    rather then malloc.h.  Thanks to Paulo Moura.

  * ADDED: concat_atom/3 to work the other way around:
    concat_atom(X, -, 'aap-noot-mies') --> X = [aap, noot, mies]

  * ADDED: Calling PL_halt(2) on SIGHUP, forcing halt handlers to run.

  * FIXED: Properly throw exception when compiling arithmetic with
    unbound (but not anonymous) variable.  Reported by Leo (leo@solvo.ru)
